pkl-core/src/test/files/LanguageSnippetTests/input/errors/typeMismatchWithSameQualifiedModuleName.pkl
module foo.bar

import "typeMismatchHelper.pkl"

mod: module = typeMismatchHelper
